Changed Pheonix to Megasonic 1.042 2/6/2023

--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj
@@ -44,7 +44,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
-      <AdditionalIncludeDirectories>./Core;./Drivers/CMSIS/Device/ST.STM32F4xx/Include;./Drivers/CMSIS/Include;./Drivers/STM32F4xx_HAL_Driver/Inc;./Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;./HAL;./Pheonix;./lvgl;./Icons;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./Core;./Drivers/CMSIS/Device/ST.STM32F4xx/Include;./Drivers/CMSIS/Include;./Drivers/STM32F4xx_HAL_Driver/Inc;./Drivers/STM32F4xx_HAL_Driver/Inc/Legacy;./HAL;./Megasonic;./lvgl;./Icons;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>DEBUG=1;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -94,36 +94,37 @@
     <ClCompile Include="Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_fsmc.c" />
     <ClCompile Include="Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_usb.c" />
     <ClCompile Include="ICONS\icon_start.c" />
-    <ClCompile Include="Pheonix\FLASH\4xx\flash_4xx.c" />
-    <ClCompile Include="Pheonix\global.c" />
-    <ClCompile Include="Pheonix\GPIO\GPIO_Init.c" />
-    <ClCompile Include="Pheonix\GPIO\pininit.c" />
-    <ClCompile Include="Pheonix\SPI\spi.c" />
-    <ClCompile Include="Pheonix\SPI\sw_spi.c" />
-    <ClCompile Include="Pheonix\SPI\w25qxx.c" />
-    <ClCompile Include="Pheonix\SPI\xpt2046.c" />
-    <ClCompile Include="Pheonix\taskmanager.c" />
-    <ClCompile Include="Pheonix\Timer\timer_pwm.c" />
-    <ClCompile Include="Pheonix\TouchLCD\4xx\TouchLCD_4xx.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Drivers\SSD1963.c" />
-    <ClCompile Include="Pheonix\TouchLCD\GUI\display.c" />
-    <ClCompile Include="Pheonix\TouchLCD\GUI\DisplayList.c" />
-    <ClCompile Include="Pheonix\TouchLCD\GUI\gui.c" />
-    <ClCompile Include="Pheonix\TouchLCD\GUI\PanelMain.designer.c" />
-    <ClCompile Include="Pheonix\TouchLCD\GUI\PanelMain.event.c" />
-    <ClCompile Include="Pheonix\TouchLCD\lcd.c" />
-    <ClCompile Include="Pheonix\TouchLCD\lcd_dma.c" />
-    <ClCompile Include="Pheonix\TouchLCD\lcd_encoder.c" />
-    <ClCompile Include="Pheonix\TouchLCD\lcd_touch.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\button.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\dropdownlist.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\edit.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\label.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\listbox.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\numeric.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\panel.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\tabcontrol.c" />
-    <ClCompile Include="Pheonix\TouchLCD\Widgets\widget.c" />
+    <ClCompile Include="Megasonic\FLASH\4xx\flash_4xx.c" />
+    <ClCompile Include="Megasonic\global.c" />
+    <ClCompile Include="Megasonic\GPIO\GPIO_Init.c" />
+    <ClCompile Include="Megasonic\GPIO\pininit.c" />
+    <ClCompile Include="Megasonic\SECS1\secs1.c" />
+    <ClCompile Include="Megasonic\SPI\spi.c" />
+    <ClCompile Include="Megasonic\SPI\sw_spi.c" />
+    <ClCompile Include="Megasonic\SPI\w25qxx.c" />
+    <ClCompile Include="Megasonic\SPI\xpt2046.c" />
+    <ClCompile Include="Megasonic\taskmanager.c" />
+    <ClCompile Include="Megasonic\Timer\timer_pwm.c" />
+    <ClCompile Include="Megasonic\TouchLCD\4xx\TouchLCD_4xx.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Drivers\SSD1963.c" />
+    <ClCompile Include="Megasonic\TouchLCD\GUI\display.c" />
+    <ClCompile Include="Megasonic\TouchLCD\GUI\DisplayList.c" />
+    <ClCompile Include="Megasonic\TouchLCD\GUI\gui.c" />
+    <ClCompile Include="Megasonic\TouchLCD\GUI\PanelMain.designer.c" />
+    <ClCompile Include="Megasonic\TouchLCD\GUI\PanelMain.event.c" />
+    <ClCompile Include="Megasonic\TouchLCD\lcd.c" />
+    <ClCompile Include="Megasonic\TouchLCD\lcd_dma.c" />
+    <ClCompile Include="Megasonic\TouchLCD\lcd_encoder.c" />
+    <ClCompile Include="Megasonic\TouchLCD\lcd_touch.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\button.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\dropdownlist.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\edit.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\label.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\listbox.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\numeric.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\panel.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\tabcontrol.c" />
+    <ClCompile Include="Megasonic\TouchLCD\Widgets\widget.c" />
     <ClInclude Include="Core\main.h" />
     <ClInclude Include="Core\stm32f4xx_hal_conf.h" />
     <ClInclude Include="Core\stm32f4xx_it.h" />
@@ -194,42 +195,43 @@
     <ClInclude Include="Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_ll_usb.h" />
     <ClInclude Include="Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_ll_utils.h" />
     <ClInclude Include="ICONS\icons.h" />
-    <ClInclude Include="Pheonix\configure.h" />
-    <ClInclude Include="Pheonix\FLASH\4xx\flash_4xx.h" />
-    <ClInclude Include="Pheonix\global.h" />
-    <ClInclude Include="Pheonix\GPIO\GPIO_Init.h" />
-    <ClInclude Include="Pheonix\GPIO\pininit.h" />
-    <ClInclude Include="Pheonix\GPIO\pinout.h" />
-    <ClInclude Include="Pheonix\GPIO\pins.h" />
-    <ClInclude Include="Pheonix\RevisionHistory.h" />
-    <ClInclude Include="Pheonix\SPI\spi.h" />
-    <ClInclude Include="Pheonix\SPI\sw_spi.h" />
-    <ClInclude Include="Pheonix\SPI\w25qxx.h" />
-    <ClInclude Include="Pheonix\SPI\xpt2046.h" />
-    <ClInclude Include="Pheonix\taskmanager.h" />
-    <ClInclude Include="Pheonix\Timer\timer_pwm.h" />
-    <ClInclude Include="Pheonix\TouchLCD\4xx\TouchLCD_4xx.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Drivers\SSD1963.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\display.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\DisplayList.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\font.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\FontArial.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\gui.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\PanelMain.designer.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\PanelMain.event.h" />
-    <ClInclude Include="Pheonix\TouchLCD\lcd.h" />
-    <ClInclude Include="Pheonix\TouchLCD\lcd_dma.h" />
-    <ClInclude Include="Pheonix\TouchLCD\lcd_encoder.h" />
-    <ClInclude Include="Pheonix\TouchLCD\lcd_touch.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\button.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\dropdownlist.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\edit.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\label.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\listbox.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\numeric.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\panel.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\tabcontrol.h" />
-    <ClInclude Include="Pheonix\TouchLCD\Widgets\widget.h" />
+    <ClInclude Include="Megasonic\configure.h" />
+    <ClInclude Include="Megasonic\FLASH\4xx\flash_4xx.h" />
+    <ClInclude Include="Megasonic\global.h" />
+    <ClInclude Include="Megasonic\GPIO\GPIO_Init.h" />
+    <ClInclude Include="Megasonic\GPIO\pininit.h" />
+    <ClInclude Include="Megasonic\GPIO\pinout.h" />
+    <ClInclude Include="Megasonic\GPIO\pins.h" />
+    <ClInclude Include="Megasonic\RevisionHistory.h" />
+    <ClInclude Include="Megasonic\SECS1\secs1.h" />
+    <ClInclude Include="Megasonic\SPI\spi.h" />
+    <ClInclude Include="Megasonic\SPI\sw_spi.h" />
+    <ClInclude Include="Megasonic\SPI\w25qxx.h" />
+    <ClInclude Include="Megasonic\SPI\xpt2046.h" />
+    <ClInclude Include="Megasonic\taskmanager.h" />
+    <ClInclude Include="Megasonic\Timer\timer_pwm.h" />
+    <ClInclude Include="Megasonic\TouchLCD\4xx\TouchLCD_4xx.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Drivers\SSD1963.h" />
+    <ClInclude Include="Megasonic\TouchLCD\GUI\display.h" />
+    <ClInclude Include="Megasonic\TouchLCD\GUI\DisplayList.h" />
+    <ClInclude Include="Megasonic\TouchLCD\GUI\font.h" />
+    <ClInclude Include="Megasonic\TouchLCD\GUI\FontArial.h" />
+    <ClInclude Include="Megasonic\TouchLCD\GUI\gui.h" />
+    <ClInclude Include="Megasonic\TouchLCD\GUI\PanelMain.designer.h" />
+    <ClInclude Include="Megasonic\TouchLCD\GUI\PanelMain.event.h" />
+    <ClInclude Include="Megasonic\TouchLCD\lcd.h" />
+    <ClInclude Include="Megasonic\TouchLCD\lcd_dma.h" />
+    <ClInclude Include="Megasonic\TouchLCD\lcd_encoder.h" />
+    <ClInclude Include="Megasonic\TouchLCD\lcd_touch.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\button.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\dropdownlist.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\edit.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\label.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\listbox.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\numeric.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\panel.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\tabcontrol.h" />
+    <ClInclude Include="Megasonic\TouchLCD\Widgets\widget.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="resource1.h" />
     <None Include="BiquOperatorPanel-Debug.vgdbsettings" />
