Removed all warning 1.044 2/7/2023

--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj
@@ -94,21 +94,21 @@
     <ClCompile Include="Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_fsmc.c" />
     <ClCompile Include="Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_usb.c" />
     <ClCompile Include="ICONS\icon_start.c" />
-    <ClCompile Include="Megasonic\FLASH\4xx\flash_4xx.c" />
     <ClCompile Include="Megasonic\global.c" />
     <ClCompile Include="Megasonic\GPIO\GPIO_Init.c" />
     <ClCompile Include="Megasonic\GPIO\pininit.c" />
     <ClCompile Include="Megasonic\SECS1\secs1.c" />
     <ClCompile Include="Megasonic\SPI\spi.c" />
     <ClCompile Include="Megasonic\SPI\sw_spi.c" />
-    <ClCompile Include="Megasonic\SPI\w25qxx.c" />
     <ClCompile Include="Megasonic\SPI\xpt2046.c" />
+    <ClCompile Include="Megasonic\STORAGE\FLASH\flash_4xx.c" />
+    <ClCompile Include="Megasonic\STORAGE\FLASH\sdcard.c" />
+    <ClCompile Include="Megasonic\STORAGE\FLASH\w25qxx.c" />
+    <ClCompile Include="Megasonic\STORAGE\storage.c" />
     <ClCompile Include="taskmanager.c" />
     <ClCompile Include="Megasonic\Timer\timer_pwm.c" />
     <ClCompile Include="Megasonic\TouchLCD\4xx\TouchLCD_4xx.c" />
     <ClCompile Include="Megasonic\TouchLCD\Drivers\SSD1963.c" />
-    <ClCompile Include="Megasonic\TouchLCD\GUI\display.c" />
-    <ClCompile Include="Megasonic\TouchLCD\GUI\DisplayList.c" />
     <ClCompile Include="Megasonic\TouchLCD\GUI\gui.c" />
     <ClCompile Include="Megasonic\TouchLCD\GUI\PanelMain.designer.c" />
     <ClCompile Include="Megasonic\TouchLCD\GUI\PanelMain.event.c" />
@@ -196,24 +196,24 @@
     <ClInclude Include="Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_ll_utils.h" />
     <ClInclude Include="ICONS\icons.h" />
     <ClInclude Include="Megasonic\configure.h" />
-    <ClInclude Include="Megasonic\FLASH\4xx\flash_4xx.h" />
     <ClInclude Include="Megasonic\global.h" />
     <ClInclude Include="Megasonic\GPIO\GPIO_Init.h" />
     <ClInclude Include="Megasonic\GPIO\pininit.h" />
     <ClInclude Include="Megasonic\GPIO\pinout.h" />
     <ClInclude Include="Megasonic\GPIO\pins.h" />
+    <ClInclude Include="Megasonic\STORAGE\FLASH\flash_4xx.h" />
+    <ClInclude Include="Megasonic\STORAGE\FLASH\sdcard.h" />
+    <ClInclude Include="Megasonic\STORAGE\FLASH\w25qxx.h" />
+    <ClInclude Include="Megasonic\STORAGE\storage.h" />
     <ClInclude Include="RevisionHistory.h" />
     <ClInclude Include="Megasonic\SECS1\secs1.h" />
     <ClInclude Include="Megasonic\SPI\spi.h" />
     <ClInclude Include="Megasonic\SPI\sw_spi.h" />
-    <ClInclude Include="Megasonic\SPI\w25qxx.h" />
     <ClInclude Include="Megasonic\SPI\xpt2046.h" />
     <ClInclude Include="taskmanager.h" />
     <ClInclude Include="Megasonic\Timer\timer_pwm.h" />
     <ClInclude Include="Megasonic\TouchLCD\4xx\TouchLCD_4xx.h" />
     <ClInclude Include="Megasonic\TouchLCD\Drivers\SSD1963.h" />
-    <ClInclude Include="Megasonic\TouchLCD\GUI\display.h" />
-    <ClInclude Include="Megasonic\TouchLCD\GUI\DisplayList.h" />
     <ClInclude Include="Megasonic\TouchLCD\GUI\font.h" />
     <ClInclude Include="Megasonic\TouchLCD\GUI\FontArial.h" />
     <ClInclude Include="Megasonic\TouchLCD\GUI\gui.h" />
